--- a/public/login.html
+++ b/public/login.html
@@ -272,10 +272,27 @@
     </div>
 
     <script>
-        // Check if already logged in
+        // Check if already logged in (verify with server to prevent loop)
         const token = localStorage.getItem('ugc_token');
         if (token) {
-            window.location.href = '/';
+            fetch('/api/auth/verify', {
+                headers: { 'Authorization': `Bearer ${token}` }
+            })
+            .then(res => res.json())
+            .then(data => {
+                if (data.success) {
+                    window.location.href = '/';
+                } else {
+                    // Invalid token (server restarted?), clear it
+                    localStorage.removeItem('ugc_token');
+                    localStorage.removeItem('ugc_email');
+                }
+            })
+            .catch(() => {
+                // Network error or other issue, clear token to be safe
+                localStorage.removeItem('ugc_token');
+                localStorage.removeItem('ugc_email');
+            });
         }
 
         // Tab switching
