Refactor: Remove Auth, Implement LocalStorage Persistence

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,11 @@
         <header class="header">
             <div class="header-content">
                 <div class="logo">
-                    <span class="logo-icon">🎬</span>
-                    <h1>UGC Video Generator</h1>
+                    <i>🎬</i>
+                    <span>UGC Generator</span>
                 </div>
-                <div class="header-actions">
-                    <span class="user-info" id="userInfo"></span>
-                    <button class="btn btn-icon" id="btnSettings" title="Settings">⚙️</button>
-                    <button class="btn btn-icon btn-logout" id="btnLogout" title="Logout">🚪</button>
+                <div class="user-status">
+                    <button id="btnSettings" class="icon-btn" title="ตั้งค่า">⚙️</button>
                 </div>
             </div>
         </header>
