Feat: Add Manual Prompt Flow (Skip AI Script)

--- a/public/index.html
+++ b/public/index.html
@@ -103,10 +103,14 @@
                         </div>
                     </div>
 
-                    <div class="form-actions">
-                        <button type="button" class="btn btn-primary" id="btnUploadAndGenerate">
-                            <span class="btn-text">📤 อัพโหลดและสร้างบทพูด</span>
-                            <span class="btn-loading" style="display: none;">⏳ กำลังดำเนินการ...</span>
+                    <div class="action-buttons">
+                        <button class="btn btn-primary" id="btnUploadAndGenerate">
+                            <span class="btn-text">🚀 อัพโหลดและสร้างบทพูด (AI)</span>
+                            <span class="btn-loading">⏳ กำลังทำงาน...</span>
+                        </button>
+                        <button class="btn btn-secondary" id="btnUploadAndManualPrompt" style="margin-left: 10px;">
+                            <span class="btn-text">✍️ อัพโหลดและเขียน Prompt เอง</span>
+                            <span class="btn-loading">⏳ กำลังทำงาน...</span>
                         </button>
                     </div>
                 </div>
